@@ -2030,15 +2030,6 @@ http://furius.ca/beancount/doc/proposal-query
     negative amounts for prices. This will match Ledger semantics and will
     remove one degree of freedom that wasn't necessary.
 
-** Deprecation
-
-  Just some old things that are marked as not supported anymore; finally remove
-  them all at once. {deprecation}
-
-  - Remove Enum from misc_utils and commit to 3.5 and above.
-  - When you do this, also add @enum.unique to beancount.core.data.BookingMethod.
-
-
 ** Parser Cleanup & Improvements
 
   - You need to validate the account name options (empty, or no :, use regex to
